--- a/styles/kiosk.css
+++ b/styles/kiosk.css
@@ -6,19 +6,84 @@ Licensed under the BSD License.
 http://yuilibrary.com/license/
 */
 /* Reset*/
-html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+/*html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}*/
 
 html, body{
-    height: 100%;
-    margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.1em;
 }
 
 p{
     margin-bottom: 10px;
+    line-height: 1em;
+}
+
+h3{
+    color: #F15D22;
+    text-transform: uppercase;
+    font-size: 1.5em;
+}
+
+ul.copy-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 50px;
+    line-height: 1em;
+}
+
+ul.copy-list li:before {
+    content: "\2022\ ";
+    color: #F15D22;
+
+}
+
+.header{
+    height: 100px;
+    background-color: #053A4F;
+}
+
+.cision-logo-container{
+    padding-top: 30px;
+}
+
+.pitch-logo-container{
+    color: white;
+    font-size: 3.2em;
+    padding-left: 55px;
+}
+
+.pledge-form{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right:25px;
+    background-color: #CECED2;
+    margin-top: 20px;
+    font-size: 1.2em;
+}
+
+.required{
+    color: #F15D22;
+    display: inline;
+}
+.promise-now{
+    font-weight: bold;
+    font-size:1.4em;
+    margin-bottom: 10px;
+    color: #4E4E4E;
+}
+
+.i-promise{
+    background-image:url(../images/pitchPRomiseButton.png);
+    border: none;
+    width: 100px;
+    height: 26px;
+    border: none;
 }
 
 label{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     display: block;
 }
 
@@ -26,29 +91,69 @@ label span{
     display:block;
 }
 
-.full-screen-container{
-    position: fixed;
-    top:0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.pledge-list.container-fluid{
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
-.left-pane{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    top: 0;
-    right: 30%;
-    padding: 20px;
-    overflow-y: scroll;
+.pledge-list-header{
+    text-align: center;
+    color: white;
+    background-color: #F15D22;
+    font-size: 1.5em;
 }
 
-.right-pane{
+.pledge-scroll{
+    overflow: hidden;
+    line-height: 1em;
+    border-left: 2px solid #B7B7B8;
+    border-right: 2px solid #B7B7B8;
+    border-bottom: 2px solid #B7B7B8;
+
+    height: 230px;
+}
+
+.scroll-item{
+    color: #B7B7B8;
+    font-size: 1.2em;
+}
+.scroll-name{
+}
+
+.scroll-company{
+    text-align:right;
+}
+
+.thankyou-center-content{
+    text-align:center;
+    padding-top: 40px;
+    color: #B7B7B8;
+    font-size: 1.7em;
+    line-height: 1.5em;
+}
+
+    .badge{
+        height: 312px;
+        width: 376px;
+    }
+
+    .thank-you-text{
+        font-weight: bold;
+        margin-top: 20px;
+    }
+    .spread-the-word{
+
+    }
+
+.footer{
     position: absolute;
-    left: 70%;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    padding: 20px;
+    bottom: 10px;
+    left: 25px;
+    font-size: .8em;
+
+}
+
+.footer a{
+    text-decoration: underline;
+    color: #B7B7B8;
 }
