--- a/styles/kiosk.css
+++ b/styles/kiosk.css
@@ -27,16 +27,18 @@ h3{
 
 ul.copy-list{
     list-style: none;
-    padding: 0;
+    padding: 0 0 0 10px;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     line-height: 1.1em;
+}
+ul.copy-list li {
+	margin-bottom: 10px;
 }
 
 ul.copy-list li:before {
     content: "\2022\ ";
     color: #F15D22;
-
 }
 
 .header{
