--- a/styles/kiosk.css
+++ b/styles/kiosk.css
@@ -27,13 +27,14 @@ h3{
 
 ul.copy-list{
     list-style: none;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 20px;
     margin: 0;
     margin-bottom: 20px;
     line-height: 1.1em;
 }
 ul.copy-list li {
 	margin-bottom: 10px;
+	text-indent: -11px;
 }
 
 ul.copy-list li:before {
